--- a/RxObjC.xcodeproj/xcshareddata/xcschemes/RxBlocking-watchOS.xcscheme
+++ b/RxObjC.xcodeproj/xcshareddata/xcschemes/RxBlocking-watchOS.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "365F3A8F1D33AC1D0096A86C"
-               BuildableName = "RxBlocking-watchOS.framework"
+               BuildableName = "RxBlocking.framework"
                BlueprintName = "RxBlocking-watchOS"
                ReferencedContainer = "container:RxObjC.xcodeproj">
             </BuildableReference>
@@ -46,7 +46,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "365F3A8F1D33AC1D0096A86C"
-            BuildableName = "RxBlocking-watchOS.framework"
+            BuildableName = "RxBlocking.framework"
             BlueprintName = "RxBlocking-watchOS"
             ReferencedContainer = "container:RxObjC.xcodeproj">
          </BuildableReference>
@@ -64,7 +64,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "365F3A8F1D33AC1D0096A86C"
-            BuildableName = "RxBlocking-watchOS.framework"
+            BuildableName = "RxBlocking.framework"
             BlueprintName = "RxBlocking-watchOS"
             ReferencedContainer = "container:RxObjC.xcodeproj">
          </BuildableReference>
