--- a/RxObjC.xcodeproj/xcshareddata/xcschemes/RxTests-watchOS.xcscheme
+++ b/RxObjC.xcodeproj/xcshareddata/xcschemes/RxTests-watchOS.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "365F3AD41D33BC150096A86C"
-               BuildableName = "RxTests-watchOS.framework"
+               BuildableName = "RxTests.framework"
                BlueprintName = "RxTests-watchOS"
                ReferencedContainer = "container:RxObjC.xcodeproj">
             </BuildableReference>
@@ -46,7 +46,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "365F3AD41D33BC150096A86C"
-            BuildableName = "RxTests-watchOS.framework"
+            BuildableName = "RxTests.framework"
             BlueprintName = "RxTests-watchOS"
             ReferencedContainer = "container:RxObjC.xcodeproj">
          </BuildableReference>
@@ -64,7 +64,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "365F3AD41D33BC150096A86C"
-            BuildableName = "RxTests-watchOS.framework"
+            BuildableName = "RxTests.framework"
             BlueprintName = "RxTests-watchOS"
             ReferencedContainer = "container:RxObjC.xcodeproj">
          </BuildableReference>
