add before update

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: objective-c
 
 xcode_project: RxObjC.xcodeproj
 
+before_install:
+  - brew update
+  - brew outdated xctool || brew upgrade xctool
+  
 matrix: 
   include:
     - os: osx
