--- a/.travis.yml
+++ b/.travis.yml
@@ -9,44 +9,39 @@ matrix:
   include:
     - osx_image: xcode7.3
       env: SDK=appletvos9.2 OS=tvOS
-    - osx_image: xcode7.3
-      env: SDK=macosx OS=OSX
-    - osx_image: xcode7.3
-      env: SDK=iphonesimulator8.4 OS=iOS NAME="iPhone 4s"
-    - osx_image: xcode7.3
-      env: SDK=iphonesimulator8.4 OS=iOS NAME="iPhone 5s"
-    - osx_image: xcode7.3
-      env: SDK=iphonesimulator9.0 OS=iOS NAME="iPhone 4s"
-    - osx_image: xcode7.3
-      env: SDK=iphonesimulator9.0 OS=iOS NAME="iPhone 5s"
-    - osx_image: xcode7.3
-      env: SDK=iphonesimulator9.0 OS=iOS NAME="iPhone 6s"
-    - osx_image: xcode7.3
-      env: SDK=iphonesimulator9.0 OS=iOS NAME="iPhone 6s Plus"
-    - osx_image: xcode7.3
-      env: SDK=iphonesimulator9.0 OS=iOS NAME="iPad 2"
-    - osx_image: xcode7.3
-      env: SDK=iphonesimulator9.0 OS=iOS NAME="iPad Pro"
-    - osx_image: xcode7.3
-      env: SDK=iphonesimulator9.0 OS=iOS NAME="iPad Air"
-    - osx_image: xcode7.3
-      env: SDK=iphonesimulator9.3 OS=iOS NAME="iPhone 4s"
-    - osx_image: xcode7.3
-      env: SDK=iphonesimulator9.3 OS=iOS NAME="iPhone 5s"
-    - osx_image: xcode7.3
-      env: SDK=iphonesimulator9.3 OS=iOS NAME="iPhone 6s"
-    - osx_image: xcode7.3
-      env: SDK=iphonesimulator9.3 OS=iOS NAME="iPhone 6s Plus"
-    - osx_image: xcode7.3
-      env: SDK=iphonesimulator9.3 OS=iOS NAME="iPad 2"
-    - osx_image: xcode7.3
-      env: SDK=iphonesimulator9.3 OS=iOS NAME="iPad Pro"
-    - osx_image: xcode7.3
-      env: SDK=iphonesimulator9.3 OS=iOS NAME="iPad Air"
+#    - osx_image: xcode7.3
+#      env: SDK=macosx OS=OSX
+#    - osx_image: xcode7.3
+#      env: SDK=iphonesimulator8.4 OS=iOS NAME="iPhone 4s"
+#    - osx_image: xcode7.3
+#      env: SDK=iphonesimulator8.4 OS=iOS NAME="iPhone 5s"
+#    - osx_image: xcode7.3
+#      env: SDK=iphonesimulator9.0 OS=iOS NAME="iPhone 4s"
+#    - osx_image: xcode7.3
+#      env: SDK=iphonesimulator9.0 OS=iOS NAME="iPhone 5s"
+#    - osx_image: xcode7.3
+#      env: SDK=iphonesimulator9.0 OS=iOS NAME="iPhone 6s"
+#    - osx_image: xcode7.3
+#      env: SDK=iphonesimulator9.0 OS=iOS NAME="iPhone 6s Plus"
+#    - osx_image: xcode7.3
+#      env: SDK=iphonesimulator9.0 OS=iOS NAME="iPad 2"
+#    - osx_image: xcode7.3
+#      env: SDK=iphonesimulator9.0 OS=iOS NAME="iPad Pro"
+#    - osx_image: xcode7.3
+#      env: SDK=iphonesimulator9.0 OS=iOS NAME="iPad Air"
+#    - osx_image: xcode7.3
+#      env: SDK=iphonesimulator9.3 OS=iOS NAME="iPhone 4s"
+#    - osx_image: xcode7.3
+#      env: SDK=iphonesimulator9.3 OS=iOS NAME="iPhone 5s"
+#    - osx_image: xcode7.3
+#      env: SDK=iphonesimulator9.3 OS=iOS NAME="iPhone 6s"
+#    - osx_image: xcode7.3
+#      env: SDK=iphonesimulator9.3 OS=iOS NAME="iPhone 6s Plus"
+#    - osx_image: xcode7.3
+#      env: SDK=iphonesimulator9.3 OS=iOS NAME="iPad 2"
+#    - osx_image: xcode7.3
+#      env: SDK=iphonesimulator9.3 OS=iOS NAME="iPad Pro"
+#    - osx_image: xcode7.3
+#      env: SDK=iphonesimulator9.3 OS=iOS NAME="iPad Air"
 
-script:
-  - if [ "$OS" == "iOS" ]; then
-      xctool -workspace RxObjc.xcworkspace -scheme AllTests-$OS -sdk $SDK -destination name=$NAME -configuration DEBUG test
-    else
-      xctool -workspace RxObjc.xcworkspace -scheme AllTests-$OS -sdk $SDK -configuration DEBUG test
-    fi
+script: ./scripts/common.sh $OS $SDK $NAME
