--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
 matrix:
   include:
     - osx_image: xcode7.3
-      env: R_SDK=macosx R_OS=OSX
+      env: R_SDK=macosx R_OS=OSX R_OS_VER=10.11 R_NAME="OS X"
     - osx_image: xcode7
       env: R_SDK=iphonesimulator9.0 R_OS=iOS R_OS_VER=8.4 R_NAME="iPhone 4s"
     - osx_image: xcode7
