--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ before_install:
   - brew update
   - brew outdated xctool || brew upgrade xctool
 
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
+
 matrix:
   include:
     - osx_image: xcode7.3
