--- a/RxObjC.xcodeproj/xcshareddata/xcschemes/RxCocoa-iOS.xcscheme
+++ b/RxObjC.xcodeproj/xcshareddata/xcschemes/RxCocoa-iOS.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "365F39171D33AAB30096A86C"
-               BuildableName = "RxCocoa.framework"
+               BuildableName = "RxCocoa-iOS"
                BlueprintName = "RxCocoa-iOS"
                ReferencedContainer = "container:RxObjC.xcodeproj">
             </BuildableReference>
