--- a/RxObjC.xcodeproj/xcshareddata/xcschemes/RxCocoa-watchOS.xcscheme
+++ b/RxObjC.xcodeproj/xcshareddata/xcschemes/RxCocoa-watchOS.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "365F3A511D33ABAE0096A86C"
-               BuildableName = "RxCocoa.framework"
+               BuildableName = "RxCocoa-watchOS"
                BlueprintName = "RxCocoa-watchOS"
                ReferencedContainer = "container:RxObjC.xcodeproj">
             </BuildableReference>
