--- a/RxObjC-NSNotificationCenter/Info.plist
+++ b/RxObjC-NSNotificationCenter/Info.plist
@@ -15,11 +15,11 @@
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.5</string>
-	<key>CFBundleSignature</key>
-	<string>????</string>
+	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>NSHumanReadableCopyright</key>
+	<string>Copyright © 2017 Pavel Malkov. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
 	<string></string>
 </dict>
